--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@azure/storage-blob": "^12.12.0",
     "catid": "^1.0.2",
+    "chromium": "^3.0.3",
     "dotenv": "^16.0.3",
     "durable-functions": "^2.1.0",
     "puppeteer": "^15.2.3"
